# dstack-test-task

./: .gitignore  FEEDBACK.md  README.md  pyproject.toml  setup.cfg
dstack_test_task/: main.py
