[tool.poetry]
name = "dstack-test-task"
version = "0.0.1"
description = "Test task for dstack.ai vacancy"
authors = ["Paul Pavlov <dev.captainmurphy@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "dstack_test_task"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.49"
docker = "^6.0.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
mypy = "0.982"
ipython = "^8.8.0"
boto3-stubs = {extras = ["logs"], version = "^1.26.49"}
setuptools = "^65.7.0"
build = "^0.10.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]